--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chartjs-node-canvas",
-  "version": "4.1.7",
+  "version": "4.1.8",
   "description": "A node renderer for Chart.js using canvas.",
   "main": "./dist/index",
   "types": "./dist/index.d.ts",
@@ -36,7 +36,7 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^2.8.0",
-    "tslib": "^2.3.1"
+    "ts-std-lib": "^1.2.2"
   },
   "peerDependencies": {
     "chart.js": "^4.0.0"
@@ -47,9 +47,9 @@
     "@types/offscreencanvas": "^2019.6.4",
     "c8": "^7.10.0",
     "chart.js": "^4.0.0",
-    "chartjs-plugin-annotation": "^1.0.2",
+    "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-crosshair": "^1.2.0",
-    "chartjs-plugin-datalabels": "^2.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-piechart-outlabels": "^0.1.4",
     "clean-dest": "^1.3.3",
     "jsdoc-to-markdown": "^5.0.3",
@@ -58,12 +58,7 @@
     "release-it": "^14.11.6",
     "resemblejs": "^4.0.0",
     "source-map-support": "^0.5.20",
-    "ts-std-lib": "^1.2.1",
-    "tslint": "^6.1.3",
-    "tslint-divid": "^1.3.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-immutable": "^6.0.1",
-    "typescript": "^4.4.4",
+    "typescript": "^3.9.10",
     "wtfnode": "^0.9.1"
   }
 }
